testdata/negative/zb_neg_tab_whitespace.ksy
meta:
  id: zb_neg_tab_whitespace
seq:
  - id: a
    type: u1
  - id: b
    type: u1
instances:
  with_tab:
    value: "a\tand\tb"
